--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -176,7 +176,8 @@
         Open-sourcing RacerD: Fast static race detection at scale [online]
     },
     url = {
-        https://code.fb.com/android/open-sourcing-racerd-fast-static-race-detection-at-scale
+        https://code.fb.com/android/%
+        open-sourcing-racerd-fast-static-race-detection-at-scale
     },
     note = {2017-10-19 [cit. 2019-05-03]}
 }
